// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Job Result should display Show Cuts link when current job is not Payfactors 1`] = `
<div
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  jobTitleClick={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  showCutsClick={[Function EventEmitter]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <tr
    class="job-result-row"
    ng-reflect-klass="job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <td
      class="growing-cell"
    >
      <span
        class="job-title"
      >
         Blend of Gas Operations Top Executive-Corporate, G 
        
        
        (13001)
      </span>
      <div
        class="vendor"
      >
         Hewitt Associates 
        
        
        - TCM Executive Long Term Incentives Total Compensation by Industry
      </div>
    </td>
    <td
      class="fixed-cell"
    >
      USA
    </td>
    <td
      class="fixed-cell"
    />
    <td
      class="fixed-cell"
    >
      
    </td>
    <td
      class="fixed-cell"
    >
      
    </td>
    <td
      class="fixed-cell"
    >
      
      <span>
        5
      </span>
    </td>
  </tr><tr
    class="job-data-cuts-row"
  >
    <td
      colspan="6"
    >
      
      <span
        class="link"
      >
         Show Cuts 
      </span>
      
      
    </td>
  </tr>
</div>
`;

exports[`Project - Add Data - Job Result should hide Show Cuts link, survey name, and job code, when the current job is Payfactors 1`] = `
<div
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  jobTitleClick={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  showCutsClick={[Function EventEmitter]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <tr
    class="job-result-row payfactors-job-result"
    ng-reflect-klass="job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <td
      class="growing-cell"
    >
      <span
        class="job-title"
      >
         Accountant II 
        
      </span>
      <div
        class="vendor"
      >
         Payfactors 
        
      </div>
    </td>
    <td
      class="fixed-cell"
    >
      USA
    </td>
    <td
      class="fixed-cell"
    />
    <td
      class="fixed-cell"
    >
      
      
      1.0
    </td>
    <td
      class="fixed-cell"
    >
      
      
      1.0
    </td>
    <td
      class="fixed-cell"
    >
      
    </td>
  </tr><tr
    class="job-data-cuts-row"
  >
    <td
      colspan="6"
    >
      
      
      
    </td>
  </tr>
</div>
`;

exports[`Project - Add Data - Job Result should show values in the correct currency when is Payfactors job  1`] = `
<div
  currencyCode={[Function String]}
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  jobTitleClick={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  showCutsClick={[Function EventEmitter]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  store={[Function Store]}
  toggleDataCutsLabel={[Function String]}
>
  <tr
    class="job-result-row payfactors-job-result"
    ng-reflect-klass="job-result-row"
    ng-reflect-ng-class="[object Object]"
  >
    <td
      class="growing-cell"
    >
      <span
        class="job-title"
      >
         Accountant II 
        
      </span>
      <div
        class="vendor"
      >
         Payfactors 
        
      </div>
    </td>
    <td
      class="fixed-cell"
    >
      USA
    </td>
    <td
      class="fixed-cell"
    />
    <td
      class="fixed-cell"
    >
      
      
      1.0
    </td>
    <td
      class="fixed-cell"
    >
      
      
      1.0
    </td>
    <td
      class="fixed-cell"
    >
      
    </td>
  </tr><tr
    class="job-data-cuts-row"
  >
    <td
      colspan="6"
    >
      
      
      
    </td>
  </tr>
</div>
`;
